# neuralNetworkForMNIST

./: CMakeLists.txt  LICENSE  README.md  build.sh  mnist.sh
mnist-configs/: input-ci.config  input.config
src/: helpers.hpp  layers.hpp  loss.hpp  matvec.hpp  nn.hpp  tensor.hpp  train_nn.cpp
src/data_loader/: image_io.hpp  label_io.hpp
